--- a/src/sass/Main.scss
+++ b/src/sass/Main.scss
@@ -9,27 +9,25 @@
   box-shadow: 5px 5px 5px 2px grey;
   margin: auto;
   padding: 1rem;
-  .main-user{
-    img{
-      outline: 2px  solid grey;
+  .main-user {
+    img {
+      outline: 2px solid grey;
       outline-offset: 3px;
-    
-
     }
-    
+
     // border-radius: 50%;
     padding: 10px;
   }
   .main-logos {
     display: flex;
     gap: 1.6rem;
-    img{
-        border: 1px solid grey;
-        border-radius: 50%;
-        padding: 2px;
+    img {
+      border: 1px solid grey;
+      border-radius: 50%;
+      padding: 2px;
     }
     img:hover {
-        cursor: pointer;
+      cursor: pointer;
     }
   }
   .main-buttons {
@@ -37,16 +35,21 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    button{
-        padding: 10px;
-        background-color: #9A4E8D;
-        color: white;
-        border: none;
-        width: 100px;
-        &:hover {
-            cursor: pointer;
-        }
-    } 
+    button {
+      padding: 10px;
+      background-color: #9a4e8d;
+      color: white;
+      border: none;
+      width: 100px;
+      &:hover {
+        cursor: pointer;
+      }
+      &:disabled {
+        
+        background-color: #e2e2e2;
+        color: #a9a9a9;
+        cursor: not-allowed;
+      }
+    }
   }
-
 }
